--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,8 +12,11 @@ body {
   /*   background-color: #f5f5f5;
   color: #4e4e4e; */
   background-color: #202020;
+  overflow-y: scroll;
 }
-
+::-webkit-scrollbar {
+  display: none;
+}
 h1,
 h2,
 h3,
