--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,29 @@
-/**
-* Template Name: DevFolio - v4.3.0
-* Template URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+
 body {
   /*   background-color: #f5f5f5;
   color: #4e4e4e; */
   background-color: #202020;
-  overflow-y: scroll;
+  overscroll-behavior-y: none;
 }
 ::-webkit-scrollbar {
   display: none;
+}
+::-webkit-selection {
+  color: #202020;
+  background: #ffdf6c;
+}
+
+::-moz-selection {
+  color: #202020;
+  background: #ffdf6c;
+}
+
+::selection {
+  color: #202020;
+  background: #ffdf6c;
 }
 h1,
 h2,
@@ -236,7 +244,7 @@ a:hover {
   font-size: 1.2rem;
   border-radius: 50%;
   line-height: 1.6;
-  margin: 0 15px 0;
+  margin: 0 15px 0 0;
   box-shadow: 0 0 0 3px #ffdf6c;
   transition: all 500ms ease;
 }
@@ -487,7 +495,8 @@ a:hover {
 }
 
 #header .logo a {
-  color: #ffdf6c;
+  color: #fff;
+  -webkit-text-stroke: 0.5px #202020;
 }
 
 #header .logo img {
@@ -759,6 +768,7 @@ a:hover {
   height: 100vh;
   position: relative;
   color: #ffdf6c;
+  margin-top: -1.5rem;
 }
 
 .hero .hero-content {
@@ -1323,8 +1333,6 @@ a:hover {
 # Education
 --------------------------------------------------------------*/
 .edu-container {
-  margin: 0;
-
   color: rgb(50, 50, 50);
   font-family: "Open Sans", sans-serif;
   font-size: 112.5%;
