--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1171,7 +1171,11 @@ a:hover {
   font-weight: 600;
   margin: 1rem 0;
   display: block;
-  font-size: 1.4rem;
+  font-size: 2rem;
+}
+
+.testimonial-box .lead {
+  font-size: 1rem;
 }
 
 .testimonial-box .comit {
